# airtouch

./: .gitignore  FINAL_README.txt  LICENSE  README.md
airtouch_01_p4/: .gitignore  CMakeLists.txt  README.md  README_CN.md  make_fonts.ps1  partitions.csv  sdkconfig.defaults
airtouch_01_p4/components/airtouch_tip_detect/: CMakeLists.txt  Kconfig.txt  airtouch_tip_detect.cpp  airtouch_tip_detect.hpp  idf_component.yml
airtouch_01_p4/components/airtouch_tip_detect/models/p4/: airtouch_tip_classifier_medium_96_0to1_defaultq.espdl  airtouch_tip_detect_pico_s8_v1.espdl
airtouch_01_p4/components/apps/: CMakeLists.txt  apps.h
airtouch_01_p4/components/apps/camera/: app_video.h  ov5647_custom.json
airtouch_01_p4/components/apps/music_player/: MusicPlayer.cpp
airtouch_01_p4/components/apps/setting/: Setting.cpp
airtouch_01_p4/components/bsp_extra/: CMakeLists.txt  idf_component.yml
airtouch_01_p4/components/bsp_extra/src/: bsp_board_extra.c
airtouch_01_p4/components/espressif__esp_hosted/: .codespellrc  CHANGELOG.md  CHECKSUMS.json  CMakeLists.txt  Kconfig  idf_component.yml
airtouch_01_p4/components/espressif__esp_hosted/common/proto/: esp_hosted_rpc.pb-c.h
airtouch_01_p4/components/espressif__esp_hosted/docs/: features.md  openthread.md
airtouch_01_p4/components/espressif__esp_hosted/examples/host_openthread_border_router/: README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
airtouch_01_p4/components/espressif__esp_hosted/examples/host_openthread_cli/: README.md  partitions.esp32p4.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
airtouch_01_p4/components/espressif__esp_hosted/host/: esp_hosted.h  esp_hosted_host_fw_ver.h
airtouch_01_p4/components/espressif__esp_hosted/slave/: CMakeLists.txt  sdkconfig.defaults.esp32c6
airtouch_01_p4/components/espressif__esp_hosted/slave/main/: CMakeLists.txt  Kconfig.openthread  Kconfig.projbuild  esp_hosted_coprocessor.c  esp_hosted_coprocessor_fw_ver.h  sdio_slave_api.c  (+8 more)
airtouch_01_p4/components/wt99p4c5_s1_board/: CMakeLists.txt  Kconfig  idf_component.yml  wt99p4c5_s1_board.c
airtouch_01_p4/main/: CMakeLists.txt  air_aim_trainer_ui.c  air_aim_trainer_ui.h  air_attention_heatmap.c  air_attention_heatmap.h  air_cursor_ui.c  air_cursor_ui.h  air_distance_guard_ui.c  air_distance_guard_ui.h  air_espdet_probe.cpp  air_espdet_probe.h  air_heatmap.c  air_heatmap.h  air_hover_test_ui.h  air_input.c  air_input.h  air_pointer.c  air_pointer.h  air_tof.c  air_tof.h  airtouch_cloud_net.c  airtouch_cloud_net.h  airtouch_cloud_uart.c  airtouch_cloud_uart.h  airtouch_storage.c  airtouch_storage.h  app_audio.c  app_audio.h  app_camera.c  app_camera.h  app_data.h  app_data_init_ui.h  app_menu.h  fruit_game.h  fruit_input.h  fruit_ui.h  game_config.h  gomoku_ai.h  gomoku_game.h  gomoku_ui.h  (+14 more)
airtouch_01_p4/spiffs/models/: rps_gesture.espdl
airtouch_02_esp8266_cloud_tof_guard/: airtouch_02_esp8266_cloud_tof_guard.ino
airtouch_03_cloudflare_worker/: cleanup_test_records.sql  package.json  schema.sql  schema_config_v2e.sql  schema_v1g_dedup.sql  wrangler.toml
airtouch_03_cloudflare_worker/src/: index.js
(+29 files in other folders)
